--- a/Friendly_Chat/src/Chat.MVC/Views/Shared/_Layout.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Shared/_Layout.cshtml
@@ -712,7 +712,8 @@
 
 
     <script src="~/assets/js/jquery-3.7.0.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/3.1.12/signalr.min.js"></script>
+    @*<script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/3.1.12/signalr.min.js"></script>*@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.10/signalr.min.js" integrity="sha512-P5G3EZ6/6i+YfHLRhH32IxWKYtw0XyeYODsBn6eXzHt7W0Z+MZ1kySXUT0ec0+WuxHEoYkjHlSnTCItpg1XMGg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!--The Layout Script-->
     <script>
         $(document).ready(function () {
@@ -1091,5 +1092,119 @@
         });
     </script>
     <!--End Profile Script-->
+    <!--The Media Script-->
+    <script>
+        $(document).ready(function () {
+            var menu = '@ViewBag.ActiveMenu';
+            if (menu == "Media") {
+                $.ajax({
+                    url: "/Media/GetLastTenPost",
+                    type: "GET",
+                    dataType: "json",
+                    success: function (data) {
+                        console.log(data);
+                        var html = "<hr />";
+                        if (data != null) {
+                            $.each(data, function (i, val) {
+                                if (val.postType == "image") {
+                                    html += `<div class="card mb-3" style="width:95%;margin-left:25px;">
+                                                                                                            <img class="card-img-top" onclick="MediaModal('`+ val.postName + `')" src="../assets/media/photos/` + val.postName + `" style="width:100%;max-height:650px;aspect-ratio:2/1;object-fit:contain" alt="Card image cap">
+                                                                                            <div class="card-body">
+                                                                                                        <img class="profil" src="../assets/images/`+ val.userPhoto + `" style="width:60px;border-radius:50%" />
+                                                                                                        <h4 style="display:inline-block;" class="card-title">`+ val.userName+ `</h4>
+                                                                                                <p class="card-text" style="display:inline-block;">
+                                                                                                                            <small class="text-muted">&nbsp;&nbsp;&nbsp;`+ val.date + `</small>
+                                                                                                </p>
+                                                                                                        <p class="card-text">`+ val.description + `</p>
+                                                                                                <div class="btn-group dropright">
+                                                                                                    <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                                                                        <i class="fa-solid fa-paper-plane"></i>
+                                                                                                    </button>
+                                                                                                    <div class="dropdown-menu">
+                                                                                                        <div style="background-color:rgb(224, 96, 182); width:250px; max-height:400px;overflow-y:scroll;overflow-x:hidden;">
+                                                                                                            <div class="user-list-item">
+                                                                                                                <span class="user-name">User 2</span>
+                                                                                                                <input type="checkbox" name="selectedUsers" value="user1" style="width:20px;height:20px;margin-right:10px;">
+                                                                                                            </div>
+                                                                                                            <div class="user-list-item">
+                                                                                                                <span class="user-name">User adminnn 3</span>
+                                                                                                                <input type="checkbox" name="selectedUsers" value="user1" style="width:20px;height:20px;margin-right:10px;">
+                                                                                                            </div>
+                                                                                                            <div class="user-list-item">
+                                                                                                                <span class="user-name">User 1123</span>
+                                                                                                                <input type="checkbox" name="selectedUsers" value="user1" style="width:20px;height:20px;margin-right:10px;">
+                                                                                                            </div>
+                                                                                                            <div class="user-list-item">
+                                                                                                                <span class="user-name">User 2</span>
+                                                                                                                <input type="checkbox" name="selectedUsers" value="user1" style="width:20px;height:20px;margin-right:10px;">
+                                                                                                            </div>
+                                                                                                            <div class="user-list-item">
+                                                                                                                <span class="user-name">User 2</span>
+                                                                                                                <input type="checkbox" name="selectedUsers" value="user1" style="width:20px;height:20px;margin-right:10px;">
+                                                                                                            </div>
+                                                                                                            <div class="user-list-item">
+                                                                                                                <span class="user-name">User adminnn 3</span>
+                                                                                                                <input type="checkbox" name="selectedUsers" value="user1" style="width:20px;height:20px;margin-right:10px;">
+                                                                                                            </div>
+                                                                                                        </div>
+                                                                                                        <button type="button" class="dropdown-item active btn btn-primary">Send</button>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                            </div>
+                                                                                        </div>`;
+                                }
+                                else if (val.postType == "video") {
+                                    html += `<div class="card mb-3" style="width:95%;margin-left:25px;">
+                                            <video style="width:100%;max-height:650px;aspect-ratio:2/1;object-fit:contain" controls>
+                                                        <source src="/assets/media/videos/`+ val.postName + `" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
+                                            <div class="card-body">
+                                                                <img src="../assets/images/`+ val.userPhoto + `" style="width:60px;border-radius:50%" />
+                                                        <h4 style="display:inline-block;" class="card-title">`+ val.userName + `</h4>
+                                                <p class="card-text" style="display:inline-block;">
+                                                                                    <small class="text-muted">&nbsp;&nbsp;&nbsp;`+ val.date + `</small>
+                                                </p>
+                                                        <p class="card-text">`+ val.description + `</p>
+                                                <div style="display:flex;justify-content:space-between">
+                                                    <!--Users list for send post-->
+                                                    <div class="btn-group dropright" style="display:inline-block">
+                                                        <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                            <i class="fa-solid fa-paper-plane"></i>
+                                                        </button>
+                                                        <div class="dropdown-menu">
+                                                            <div style="background-color:rgb(224, 96, 182); width:250px; max-height:400px;overflow-y:scroll;overflow-x:hidden;">
+                                                                <div class="user-list-item">
+                                                                    <span class="user-name">User 2</span>
+                                                                    <input type="checkbox" name="selectedUsers" value="user1" style="width:20px;height:20px;margin-right:10px;">
+                                                                </div>
+                                                            </div>
+                                                            <button type="button" class="dropdown-item active btn btn-primary">Send</button>
+                                                        </div>
+                                                    </div>
+                                                    <!--like dislike button-->
+                                                    <div style="display:inline-block">
+                                                        <p class="like-count" style="display:inline-block">25</p>
+                                                        <button type="button" class="btn btn-outline-primary like">
+                                                            <i class="fa-regular fa-heart"></i>
+                                                        </button>
+                                                        <button type="button" class="btn btn-outline-primary dislike" style="display:none;">
+                                                            <i class="fa-solid fa-heart fa-beat" style="color: #e23232;"></i>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>`;
+                                }
+                            });
+                        }
+                        $("#posts").empty();
+                        $("#posts").append(html);
+                    }
+                });
+            };
+        });
+    </script>
+    <!--End Media Script-->
 </body>
 </html>
