--- a/Friendly_Chat/src/Chat.MVC/Views/Media/Index.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Media/Index.cshtml
@@ -23,10 +23,10 @@
 
 </section>
 
-<section class="chat" style="height:700px;width:85%;display:inline-block;overflow-y:scroll;overflow-x:hidden">
+<section class="chat chatpost" style="height:700px;width:85%;display:inline-block;overflow-y:scroll;overflow-x:hidden">
     <div class="Posts" id="posts">
         <hr />
-        <div class="card mb-3" style="width:95%;margin-left:25px;">
+@*        <div class="card mb-3" style="width:95%;margin-left:25px;">
             <video style="width:100%;max-height:650px;aspect-ratio:2/1;object-fit:contain" controls>
                 <source src="/assets/media/videos/messi.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -112,6 +112,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </section>
