add signalR configration

--- a/Friendly_Chat/src/Chat.MVC/Views/Home/Index.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Home/Index.cshtml
@@ -7,51 +7,50 @@
 <script src="~/assets/js/jquery-3.7.0.min.js"></script>
 
 
-<section  class="discussions" style="overflow-y:scroll;overflow-x:hidden;">
+<section class="discussions" style="overflow-y:scroll;overflow-x:hidden;">
 
     <div style="margin-top:15px;">
     </div>
     <div id="ChatBox">
-
     </div>
-@*    <div class="discussion  message-active">
-        <div class="photo"
-             style="background-image: url(https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);">
-            <div class="online"></div>
-        </div>
-        <div class="desc-contact">
-            <p class="name">Megan Leib</p>
-            <p class="message">9 pm at the bar if possible 😳</p>
-        </div>
-        <div class="timer">12 sec</div>
+    @*    <div class="discussion  message-active">
+    <div class="photo"
+    style="background-image: url(https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);">
+    <div class="online"></div>
     </div>
-
-   <div class="discussion">
-        <div class="photo"
-             style="background-image: url(https://i.pinimg.com/originals/a9/26/52/a926525d966c9479c18d3b4f8e64b434.jpg);">
-            <div class="online"></div>
-        </div>
-        <div class="desc-contact">
-            <p class="name">Dave Corlew</p>
-            <p class="message">Let's meet for a coffee or something today ?</p>
-        </div>
-        <div class="timer">3 min</div>
+    <div class="desc-contact">
+    <p class="name">Megan Leib</p>
+    <p class="message">9 pm at the bar if possible 😳</p>
+    </div>
+    <div class="timer">12 sec</div>
     </div>
 
     <div class="discussion">
-        <div class="photo"
-             style="background-image: url(https://images.unsplash.com/photo-1553514029-1318c9127859?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80);">
-        </div>
-        <div class="desc-contact">
-            <p class="name">Elsie Amador</p>
-            <p class="message">What the f**k is going on ?</p>
-        </div>
-        <div class="timer">1 day</div>
+    <div class="photo"
+    style="background-image: url(https://i.pinimg.com/originals/a9/26/52/a926525d966c9479c18d3b4f8e64b434.jpg);">
+    <div class="online"></div>
+    </div>
+    <div class="desc-contact">
+    <p class="name">Dave Corlew</p>
+    <p class="message">Let's meet for a coffee or something today ?</p>
+    </div>
+    <div class="timer">3 min</div>
+    </div>
+
+    <div class="discussion">
+    <div class="photo"
+    style="background-image: url(https://images.unsplash.com/photo-1553514029-1318c9127859?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80);">
+    </div>
+    <div class="desc-contact">
+    <p class="name">Elsie Amador</p>
+    <p class="message">What the f**k is going on ?</p>
+    </div>
+    <div class="timer">1 day</div>
     </div>*@
 </section>
 
 
-<section class="chat" >
+<section class="chat">
 
     <div class="chat-icon" style="margin-top:200px;margin-left:150px;">
         <i class="far fa-comments" style="font-size:300px;"></i>
@@ -60,45 +59,66 @@
         <img src="../assets/images/default.png" style="width: 55px; height: 55px" class="rounded-circle" />
         <p class="name"><b id="header-name"></b></p>
     </div>
-    
+
     <div class="messages-chat" style="overflow-y:scroll;overflow-x:hidden;height:500px;display:none;">
         @*<div class="message">
-            <p class="text"> Salam </p>
+        <p class="text"> Salam </p>
         </div>
-       <div class="message">
-            <p class="text"> What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?</p>
+        <div class="message">
+        <p class="text"> What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?</p>
         </div>
         <p class="time"> 14h58</p>
         <div class="message">
-            <div class="response">
-                <p class="text"> Hey Megan ! It's been a while 😃</p>
-            </div>
+        <div class="response">
+        <p class="text"> Hey Megan ! It's been a while 😃</p>
+        </div>
         </div>
         <div class="message">
-            <div class="response">
-                <p class="text"> Hey Megan ! It's been a while 😃</p>
-            </div>
+        <div class="response">
+        <p class="text"> Hey Megan ! It's been a while 😃</p>
+        </div>
         </div>
         <div class="message">
-            <div class="response">
-                <p class="text"> When can we meet ?</p>
-            </div>
+        <div class="response">
+        <p class="text"> When can we meet ?</p>
+        </div>
         </div>
         <p class="response-time time"> 15h04</p>
         <div class="message">
-            <p class="text"> 9 pm at the bar if possible 😳</p>
+        <p class="text"> 9 pm at the bar if possible 😳</p>
         </div>
         <p class="time"> 15h09</p>
 
 
         <div class="message">
-            <p class="text"> What are you doing tonight ? Want to go take a drink ?</p>
+        <p class="text"> What are you doing tonight ? Want to go take a drink ?</p>
         </div>*@
     </div>
     <div class="footer-chat" style="width: 650px; position:absolute; margin-bottom:30px;display:none">
         @*<i class="icon fa fa-smile-o clickable" style="font-size:25pt;" aria-hidden="true"></i>*@
-        <input data-toUser="myval" type="text" style="margin-left:70px;width:500px" class="write-message" placeholder="Type your message here"/>
+        <textarea maxlength="2000" data-toUser="myval" type="text" id="myTextarea" style="margin-left:70px;width:500px; resize: none;overflow-y:auto" class="write-message" placeholder="Type your message here"></textarea>
         @*<i id="sendMessage" class="icon send fa fa-paper-plane-o clickable" aria-hidden="true"></i>*@
     </div>
 </section>
+<script>
+    var textarea = document.getElementById("myTextarea");
+
+    textarea.addEventListener("input", function () {
+        var lineHeight = 10; // px
+        var lineCount = (this.scrollHeight / lineHeight);
+        var minHeight = 50;
+        var maxHeight = 90;
+        var newHeight = (lineCount * lineHeight);
+        if (newHeight < minHeight) {
+            newHeight = minHeight;
+        }
+        if (newHeight > maxHeight) {
+            this.style.overflowY = "scroll";
+        }
+        else {
+            this.style.height = newHeight + "px";
+        }
+    });
+</script>
+
 
