--- a/Friendly_Chat/src/Chat.MVC/Views/Media/Index.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Media/Index.cshtml
@@ -2,20 +2,20 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<section class="discussions" style="width:7%; display:inline-block;">
+<section class="discussions" style="width:8%; display:inline-block; overflow-x:hidden">
     <br />
     <br />
-    <a asp-action="Index2" asp-controller="Media" class="btn btn-outline-primary" style="margin-top:10px;height:70px;">
+    <a asp-action="MyShared" asp-controller="Media" id="myshared" class="btn btn-outline-primary" style="margin-top:10px;height:70px; width:70px;">
         <i class="fa-solid fa-up-right-from-square " style="font-size:20px;"></i>
         <br />
         <p style="font-size:10px;">My Shared</p>
     </a>
-    <a asp-action="Share" asp-controller="Media" class="btn btn-outline-primary" style="margin-top:10px; height:70px;">
+    <a asp-action="Share" asp-controller="Media" id="newpost" class="btn btn-outline-primary" style="margin-top:10px; height:70px; width:70px;">
         <i class="fa-solid fa-square-share-nodes" style="font-size:20px;"></i>
         <br />
         <p style="font-size:10px;">New post</p>
     </a>
-    <a asp-action="Index2" asp-controller="Media" class="btn btn-outline-primary" style="margin-top:10px; height:70px;">
+    <a asp-action="Index2" asp-controller="Media" id="sentpost" class="btn btn-outline-primary" style="margin-top:10px; height:70px; width:70px;">
         <i class="far fa-comments" style="font-size:20px;"></i>
         <br />
         <p style="font-size:10px;">Sent posts</p>
