--- a/Friendly_Chat/src/Chat.MVC/Views/Media/Share.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Media/Share.cshtml
@@ -1,23 +1,24 @@
 ﻿@model SharePostViewModel;
 
-<section class="discussions" style="width:7%; display:inline-block;">
+<section class="discussions" style="width:8%; display:inline-block; overflow-x:hidden">
     <br />
     <br />
-    <a asp-action="Index2" asp-controller="Media" class="btn btn-outline-primary" style="margin-top:10px;height:70px;">
+    <a asp-action="MyShared" asp-controller="Media" id="myshared" class="btn btn-outline-primary" style="margin-top:10px;height:70px; width:70px;">
         <i class="fa-solid fa-up-right-from-square " style="font-size:20px;"></i>
         <br />
         <p style="font-size:10px;">My Shared</p>
     </a>
-    <a asp-action="Share" asp-controller="Media" class="btn btn-outline-primary" style="margin-top:10px; height:70px;">
+    <a asp-action="Share" asp-controller="Media" id="newpost" class="btn btn-outline-primary" style="margin-top:10px; height:70px; width:70px;">
         <i class="fa-solid fa-square-share-nodes" style="font-size:20px;"></i>
         <br />
         <p style="font-size:10px;">New post</p>
     </a>
-    <a asp-action="Index2" asp-controller="Media" class="btn btn-outline-primary" style="margin-top:10px; height:70px;">
+    <a asp-action="Index2" asp-controller="Media" id="sentpost" class="btn btn-outline-primary" style="margin-top:10px; height:70px; width:70px;">
         <i class="far fa-comments" style="font-size:20px;"></i>
         <br />
         <p style="font-size:10px;">Sent posts</p>
     </a>
+
 </section>
 
 <section class="chat" style="height:700px;width:85%;display:inline-block;overflow-y:scroll;overflow-x:hidden">
@@ -32,7 +33,7 @@
         </div>
         <div class="form-group">
             <label for="decriptioninput" style="display:inline-block">Add Description(Max length 1500character)</label>
-            <textarea type="text" maxlength="1500" asp-for="Description" class="form-control" id="decriptioninput" style="resize: vertical;box-sizing: border-box;min-height:120px;max-height:300px;overflow-y:auto" placeholder="Enter decription"></textarea>
+            <textarea type="text" maxlength="1200" asp-for="Description" class="form-control" id="decriptioninput" style="resize: vertical;box-sizing: border-box;min-height:120px;max-height:300px;overflow-y:auto" placeholder="Enter decription"></textarea>
         </div>
         <div style="display:flex;justify-content:right">
             <button type="submit" class="btn btn-outline-primary">Share post</button>
